<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.braun1792.travelmilescalculator.MainActivity"
    android:background="@drawable/appbackground">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvTitle"
        android:text="@string/app_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/from"
        android:id="@+id/tvFrom"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/tvTitle"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spnrFrom"
        android:layout_marginTop="10dp"
        android:layout_alignBottom="@+id/tvFrom"
        android:layout_alignEnd="@id/tvTitle"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/to"
        android:id="@+id/tvTo"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/tvFrom"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spnrTo"
        android:layout_marginTop="10dp"
        android:layout_alignBottom="@+id/tvTo"
        android:layout_alignEnd="@+id/tvTitle"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:id="@+id/btnCalculate"
        android:layout_marginTop="98dp"
        android:layout_below="@+id/spnrTo"
        android:layout_centerHorizontal="true"
        android:onClick="calculate" />

</RelativeLayout>
